fixed layout issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -182,7 +182,7 @@ figcaption {
 
 /* Main */
 .project-grid {
-    justify-content: space-between;
+    justify-content: space-between !important;
 }
 
 .scroll-top {
